bee-common-derive/tests/packable/dup_id_enum.stderr
error: The identifier `0` is already being used for the `None` variant.
  --> $DIR/dup_id_enum.rs:13:21
   |
13 |     #[packable(id = 0)]
   |                     ^
